# lang

./: .gitignore  Cargo.toml  LICENSE  README.md  test  test.cxx  testing.lang
.fleet/: settings.json
src/: lib.rs  main.rs
src/examples/: expression.lang  generator.lang  global_const.lang  global_let.lang  if.lang  let.lang  loop_function.lang  main.lang
src/lexer/: lexer.rs  mod.rs
src/test/: mod.rs  utils.rs
src/transpiler/: cxx.rs  mod.rs
